add: Query1 for AISData done